# BLADE

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_gen_analyses.py  run_get_eval.py  run_mcq.py  run_server.py
blade_bench/: config.py  logger.py  parse_code.py  utils.py
blade_bench/baselines/: config.py  convert.py  main.py  multirun.py  run.py  run_mcq.py  utils.py
blade_bench/baselines/agent/: __init__.py  react_agent.py
blade_bench/baselines/datamodel/: run.py
blade_bench/baselines/lm/: __init__.py  format.py  gen_analysis.py  mcq.py
blade_bench/conf/: llm_config.yml
blade_bench/data/: __init__.py  annotation.py  dataset.py  load_annotation.py
blade_bench/data/datamodel/: __init__.py  graph.py  mcq.py  specs.py  transform_graph.py  transform_state.py  transforms.py  verbs.py
blade_bench/data/process/: __init__.py  load.py
blade_bench/datasets/: LICENSE
blade_bench/datasets/affairs/: annotations.csv  data.csv  info.json  mcq_dataset.json
blade_bench/datasets/amtl/: annotations.csv  data.csv  info.json  mcq_dataset.json
blade_bench/datasets/boxes/: annotations.csv  data.csv  info.json  mcq_dataset.json
blade_bench/datasets/caschools/: annotations.csv  data.csv  info.json  mcq_dataset.json
blade_bench/datasets/conversation/: info.json
blade_bench/datasets/crofoot/: annotations.csv  data.csv  info.json  mcq_dataset.json
blade_bench/datasets/fertility/: data.csv  info.json
blade_bench/eval/: convert.py  eval_submission.py  evaluator.py  exceptions.py  gather_results.py  get_model_metrics.py  metrics.py  utils.py
blade_bench/llms/: __init__.py  base.py  config.py  config_load.py  datamodel.py  llm.py  textgen_anthropic.py  textgen_gemini.py  textgen_groq.py  textgen_huggingface.py  textgen_mistral.py  textgen_openai.py  textgen_together.py  utils.py
blade_bench/nb/: __init__.py  base.py  code_formatter.py  df_hash.py  funcs.py  nb_executor.py  simple_code_executor.py  transform_unit_executor.py
blade_bench/tests/: __init__.py  test_calc_metrics.py  test_convert.py  test_evaluator.py  test_generators.py  test_local_generator.py  test_nb_executor.py  test_transform_eval.py
example/: multirun_analyses.json  submission_analyses.json  submission_schema.json
run_scripts/: sh_run_agent.sh  sh_run_agent_eval.sh  sh_run_mcq.sh  sh_run_one_turn.sh  sh_run_one_turn_eval.sh
tests/: test_evaluator.py  test_generators.py  test_lms.py  test_nb_executor.py  test_parse_code.py  test_transform_eval.py  test_transform_eval_input.py
tests/mock_data/: __init__.py  toy.py
(+78 files in other folders)
