[tool.poetry]
name = "blade-bench"
version = "0.1.1"
description = "Dataset and code for 'BLADE: Benchmarking Language Model Agents for Data-Driven Science'(https://arxiv.org/abs/2408.09667)"
authors = ["Ken Gu <kenqgu@cs.washington.edu>"]
readme = "README.md"
repository = "https://github.com/behavioral-data/BLADE"
packages = [
    { include = "blade_bench" },
]
exclude = ["*.pkl"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
diskcache = "^5.6.3"
loguru = "^0.7.2"
backoff = "^2.2.1"
openai = "^1.35.3"
absl-py = "^2.1.0"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
anthropic = "^0.29.0"
google-generativeai = "^0.7.0"
langchain = "^0.2.5"
networkx = "^3.3"
pandas = "1.5.3"
astor = "^0.8.1"
rich = "^13.7.1"
nbclient = "^0.10.0"
ipython = "^8.25.0"
pillow = "^10.3.0"
nbformat = "^5.10.4"
ipykernel = "^6.29.4"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"
matplotlib = "^3.9.0"
transformers = "^4.41.2"
accelerate = "^0.31.0"
fastapi = "^0.111.0"
click = "^8.1.7"
seaborn = "^0.13.2"
groq = "^0.9.0"
mistralai = "^0.4.2"
together = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
requests-mock = "^1.12.1"
pytest = "^8.2.2"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
gspread = "^6.1.2"
gspread-dataframe = "^4.0.0"
gspread-formatting = "^1.2.0"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
